# conda-runtime

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: ci.yml  prove-conda-ship-source.yml  recover-runtime-26.5.3.yml  release-runtime.yml  release-updater.yml
docs/: releasing-the-runtime.md  releasing-the-updater.md
installers/: install.ps1.in  install.sh.in
recipes/conda-runtime-updater/: recipe.yaml
runtime/: conda.toml  runtime.condarc
scripts/: check-anaconda-token.py  prove-runtime-update.py  publish-runtime-packages.py  validate-runtime-tag.py  verify-runtime-artifacts.py  verify-update-package.py
tests/e2e/gen1/: conda.toml
updater/: README.md  pyproject.toml
updater/src/conda_runtime_updater/: __init__.py  helper.py  installation.py  locking.py  metadata.py  plugin.py
updater/tests/: test_installation.py  test_plugin.py  test_release_packages.py
