[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "conda-runtime-updater"
version = "0.1.0"
description = "Coordinate standalone conda executable updates with root-prefix transactions."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Jannis Leidel", email = "jannis@leidel.info" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["conda>=26.1.1"]

[project.optional-dependencies]
test = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.12",
]

[project.entry-points.conda]
conda-runtime-updater = "conda_runtime_updater.plugin"

[project.urls]
repository = "https://github.com/jezdez/conda-runtime"

[tool.hatch.build.targets.wheel]
packages = ["src/conda_runtime_updater"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "FA", "I", "RUF100", "T10", "TCH", "UP", "W"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true
