[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "conda-runtime-updater"
version = "0.1.0"
description = "Coordinate standalone conda executable updates with root-prefix transactions."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Jannis Leidel", email = "jannis@leidel.info" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["conda>=26.1.1"]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "ruff>=0.12",
]

[project.entry-points.conda]
conda-runtime-updater = "conda_runtime_updater.plugin"

[project.urls]
repository = "https://github.com/jezdez/conda-runtime"

[tool.hatch.build.targets.wheel]
packages = ["src/conda_runtime_updater"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "FA", "I", "RUF100", "T10", "TCH", "UP", "W"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"
conda = ">=26.1.1"
hatchling = ">=1.27"
pytest = ">=8"
rattler-build = "0.70.*"
ruff = ">=0.12"

[tool.pixi.feature.publish]
platforms = ["linux-64"]

[tool.pixi.feature.publish.dependencies]
anaconda-client = "==1.14.1"
python = "3.12.*"

[tool.pixi.environments]
publish = { features = ["publish"], no-default-feature = true }

[tool.pixi.pypi-dependencies]
conda-runtime-updater = { path = ".", editable = true }

[tool.pixi.tasks]
lint = { cmd = "ruff check .", description = "Check updater code style" }
format-check = { cmd = "ruff format --check .", description = "Verify updater formatting" }
test = { cmd = "pytest", description = "Run updater tests" }
build-conda-package = { cmd = "rattler-build build --recipe recipes/conda-runtime-updater/recipe.yaml --channel conda-forge", cwd = "..", description = "Build the updater conda package" }
